--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ canvas{
      box-shadow: 10px 5px 5px rgb(0, 238, 255);
      border: 5px solid white;
      border-radius: 15px;
+     margin-top: 50px;
 }
 
 body{
